# langchain-rag-docs-chatbot

./: .gitignore  README.md  chat.py  chat_bot.ipynb  codes.py  final_chat_bot.ipynb  gui.py  index.html  main.py  pyproject.toml  r.htm  requirements.txt  script.js  styles.css
chroma4/: chroma.sqlite3
trainings/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores.ipynb  03_vectorstores_and_embeddings.ipynb  05_question_answering.ipynb  06_chat.ipynb
trainings/chroma_langchain_db/: chroma.sqlite3
