[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Hamza Qureshi - Desktop <hamza7771.861@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-openai = "^0.2.14"
langchain-core = "^0.3.28"
langgraph = "^0.2.60"
langchain-google-genai = "^2.0.7"
pypdf = "^5.1.0"
langchain-community = "^0.3.13"
chromadb = "^0.5.23"
chainlit = "^1.3.2"
pydantic = "2.10.1"
pypdf2 = "^3.0.1"
langchain = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
